# Wazuh-MCP-Server

./: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
src/: __init__.py  client.py  config.py  exceptions.py  indexer_client.py  main.py  server.py
src/tools/: __init__.py
src/tools/wazuh_indexer/: __init__.py  alert_tools.py
src/tools/wazuh_manager/: __init__.py  agent_tools.py  auth_tools.py  rules_tools.py  sca_tools.py  syscollector_tools.py
test/: __init__.py  check_indexer.py  check_server.py  debug_tool.py
