[project]
name = "wazuh-mcp"
version = "0.1.0"

description = "Model Context Protocol(MCP) server for Wazuh(SIEM)"
author = "Arfan Abid"

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.4",
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.30",
]
